feat(financeiro): adiciona consolidado de contas e saldos
